adjust project header spacing and fix link condition

--- a/src/components/styles/_mixins.scss
+++ b/src/components/styles/_mixins.scss
@@ -9,6 +9,4 @@
     background-size: 400% 400%;
     animation: AnimationName 60s ease infinite;
     width: 100%;
-    margin: 0 auto 30px;
-    padding: 60px 0;
 }
